Fix alignment for reset-score-container

--- a/styles/game.css
+++ b/styles/game.css
@@ -51,7 +51,9 @@ main {
 
 
 .reset-score-container {
-  margin-top: 50px;
+  /* margin-top: 50px;
+  place-items: center; */
+  display: grid;
   place-items: center;
 }
 
